--- a/ExamApplication/ExamApplication.Api/ExamApplication.Api.csproj
+++ b/ExamApplication/ExamApplication.Api/ExamApplication.Api.csproj
@@ -11,11 +11,12 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.22">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     </ItemGroup>
 
-    <ItemGroup>
-      <Folder Include="Controllers\V1\" />
-    </ItemGroup>
 
 </Project>
