--- a/ExamApplication/ExamApplication.Business/ExamApplication.Business.csproj
+++ b/ExamApplication/ExamApplication.Business/ExamApplication.Business.csproj
@@ -18,4 +18,11 @@
       <ProjectReference Include="..\ExamApplication.Data\ExamApplication.Data.csproj" />
     </ItemGroup>
 
+
+
+
+    <ItemGroup>
+      <Folder Include="Services\" />
+    </ItemGroup>
+
 </Project>
